--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Say Hi
       run: echo "Hi there !"
     - name: Install git
-      run: apk add git
+      run: apt install git
     - name: Check teams that changed
       run: |
         for file in "narps_open/pipelines/team_2T6S.py" ".gitlab-ci.yml" "narps_open/pipelines/team_98BT.py" "narps_open/pipelines/team_1KB2_wip.py"
