--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,11 +12,13 @@ on:
 jobs:
   pre-job: # name of the job
     runs-on: ubuntu-latest
-
+    outputs:
+      teams: ${{ steps.step1.outputs.teams }}
     steps:
     - name: Say Hi
       run: echo "Hi there !"
     - name: Check teams that changed
+      id: check
       run: |
         for file in "narps_open/pipelines/team_2T6S.py" ".gitlab-ci.yml" "narps_open/pipelines/team_98BT.py" "narps_open/pipelines/team_1KB2_wip.py"
         do
@@ -29,9 +31,7 @@ jobs:
           fi
         done
         echo $teams
-    - name: Output teams
-      id: pre-job-output
-      run: echo "TEAMS=$teams" >> $GITHUB_OUTPUT
+        echo "teams=$teams" >> $GITHUB_OUTPUT
 
   display-job:
     needs: pre-job
@@ -40,7 +40,7 @@ jobs:
     steps:
     - name: Display team ids & associated test files
       run: |
-        for team_id in ${{ steps.pre-job-output.outputs.TEAMS }}
+        for team_id in ${{ needs.pre-job.outputs.teams }}
         do
           TEST_FILES="$TEST_FILES tests/pipelines/test_team_$team_id.py"
         done
