--- a/.github/workflows/diff.yml
+++ b/.github/workflows/diff.yml
@@ -9,8 +9,14 @@ jobs:
   jobi-joba: # name of the job
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout main branch, for comparison
+      uses: actions/checkout@v3
+      with:
+        ref: main
     - name: Checkout repository
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 1
     - name: List branches
       run:  git branch -a
     - name: Check teams that changed
