--- a/.github/workflows/diff.yml
+++ b/.github/workflows/diff.yml
@@ -13,6 +13,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         ref: main
+        fetch-depth: 1
     - name: Checkout repository
       uses: actions/checkout@v3
     - name: List branches
