--- a/.github/workflows/diff.yml
+++ b/.github/workflows/diff.yml
@@ -13,9 +13,10 @@ jobs:
       uses: actions/checkout@v3
       with:
         ref: main
+        fetch-depth: 1
     - name: Checkout repository
       uses: actions/checkout@v3
     - name: List branches
       run:  git branch -a
     - name: Check teams that changed
-      run: echo $(git diff --name-only origin/main...$GITHUB_SHA)
+      run: echo $(git diff --name-only remotes/origin/main...$GITHUB_SHA)
