--- a/.github/workflows/diff.yml
+++ b/.github/workflows/diff.yml
@@ -13,9 +13,11 @@ jobs:
       uses: actions/checkout@v3
       with:
         ref: main
-        fetch-depth: 1
+        fetch-depth: 0
     - name: Checkout repository
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
     - name: List branches
       run:  git branch -a
     - name: Check teams that changed
