--- a/.github/workflows/diff.yml
+++ b/.github/workflows/diff.yml
@@ -2,7 +2,12 @@
 name: pipeline_testing
 
 # Define when it runs (on pushes when code for a pipeline changes)
-on: push
+on:
+  push:
+    paths:
+      - 'lib/**'
+
+  workflow_dispatch:
 
 # Jobs that define the workflow
 jobs:
