--- a/.github/workflows/diff.yml
+++ b/.github/workflows/diff.yml
@@ -2,8 +2,7 @@
 name: pipeline_testing
 
 # Define when it runs (on pushes when code for a pipeline changes)
-on:
-  workflow_dispatch:
+on: workflow_dispatch
 
 # Jobs that define the workflow
 jobs:
