--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: testing
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10"]
