Test github action step summary

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -12,7 +12,11 @@ jobs:
       id: hi
       run: |
         echo "Run by pull_request"
-        echo "teams=05462315" >> $GITHUB_OUTPUT
+        teams=05462315
+        echo "teams=$teams" >> $GITHUB_OUTPUT
+        echo ":rocket: `pr-job` summary :rocket:" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY # this is a blank line
+        echo "- value is $teams" >> $GITHUB_STEP_SUMMARY
 
   message-job:
     needs: pr-job
