--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -20,7 +20,7 @@ jobs:
         echo "" >> $GITHUB_STEP_SUMMARY # this is a blank line
         echo "| Month    | Savings |" >> $GITHUB_STEP_SUMMARY
         echo "| -------- | ------- |" >> $GITHUB_STEP_SUMMARY
-        cat test_file.txt >> $GITHUB_STEP_SUMMARY
+        cat ./test_file.txt >> $GITHUB_STEP_SUMMARY
 
   message-job:
     needs: pr-job
