adding markdown table in actions summary

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -8,6 +8,7 @@ jobs:
     outputs:
       teams: ${{ steps.hi.outputs.teams }}
     steps:
+    - uses: actions/checkout@v3
     - name: Say Hi
       id: hi
       run: |
