Using variables in github CI

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -13,5 +13,5 @@ jobs:
       run: echo "Run by push"
     - name: Get config
       run: |
-        echo ${{ vars.TEST_CONFIG }} > test_gonfig.toml
+        echo "${{ vars.TEST_CONFIG }}" > test_gonfig.toml
         cat test_gonfig.toml
