testing github actions on issues

--- a/.github/workflows/pipeline_update.yml
+++ b/.github/workflows/pipeline_update.yml
@@ -35,6 +35,7 @@ jobs:
         cd wiki
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
+        git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.wiki
         git add .
         git commit -m "Pipeline status updated"
         git push
