--- a/.github/workflows/pipeline_update.yml
+++ b/.github/workflows/pipeline_update.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Checkout wiki
       uses: actions/checkout@v3
       with:
-        repository: ${{github.repository}}.wiki
+        repository: https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{github.repository}}.wiki
         path: wiki
 
     - name: Update the wiki file with new pipeline statuses
@@ -29,7 +29,6 @@ jobs:
         cd wiki
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.wiki
         git add .
         git commit -m "Pipeline status updated"
         git push
