--- a/.github/workflows/pipeline_update.yml
+++ b/.github/workflows/pipeline_update.yml
@@ -17,16 +17,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Checkout wiki
+    - name: Checkout repo
       uses: actions/checkout@v3
       with:
-        repository: https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{github.repository}}.wiki
-        path: wiki
+        repository: ${{github.repository}}
 
     - name: Update the wiki file with new pipeline statuses
       run: |
-        echo "wiki" > wiki/pipeline_status.md
-        cd wiki
+        echo "wiki" > pipeline_status.md
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add .
