--- a/.github/workflows/pipeline_update.yml
+++ b/.github/workflows/pipeline_update.yml
@@ -17,16 +17,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Checkout wiki
-      uses: actions/checkout@v3
-      with:
-        repository: ${{github.repository}}.wiki
-        path: wiki
+    - uses: actions/checkout@v3
 
     - name: Update the wiki file with new pipeline statuses
       run: |
-        echo "wiki" > wiki/pipeline_status.md
-        cd wiki
+        echo "wiki" > pipeline_status.md
         git config user.name github-actions
         git config user.email github-actions@github.com
         git add .
