--- a/.github/workflows/pipeline_update.yml
+++ b/.github/workflows/pipeline_update.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
 
     - uses: actions/checkout@v3
+      with:
+        token: ${{ secrets.GH_PAT }} # `GH_PAT` is a secret that contains your PAT
 
     - name: Update the wiki file with new pipeline statuses
       run: |
