--- a/.github/workflows/pipeline_update.yml
+++ b/.github/workflows/pipeline_update.yml
@@ -17,15 +17,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - uses: actions/checkout@v3
+    - name: Checkout wiki
+      uses: actions/checkout@v3
       with:
-        token: ${{ secrets.GH_PAT }} # `GH_PAT` is a secret that contains your PAT
+        repository: ${{github.repository}}.wiki
+        path: wiki
 
     - name: Update the wiki file with new pipeline statuses
       run: |
-        echo "wiki" > pipeline_status.md
-        git config user.name github-actions
-        git config user.email github-actions@github.com
+        echo "wiki" > wiki/pipeline_status.md
+        cd wiki
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
         git add .
         git commit -m "Pipeline status updated"
-        git push
+
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
