--- a/.github/workflows/pipeline_update.yml
+++ b/.github/workflows/pipeline_update.yml
@@ -23,15 +23,13 @@ jobs:
     - name: Checkout wiki
       uses: actions/checkout@v3
       with:
-        repository: ${{github.repository}}.wiki
-        path: wiki
+        repository: ${{github.repository}}
 
     - name: Update the wiki file with new pipeline statuses
       run: |
-        echo "wiki" > wiki/pipeline_status.md
-        cd wiki
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
+        echo "wiki" > pipeline_status.md
+        git config user.name github-actions
+        git config user.email github-actions@github.com
         git add .
         git commit -m "Pipeline status updated"
         git push
