--- a/.github/workflows/pipeline_update.yml
+++ b/.github/workflows/pipeline_update.yml
@@ -9,9 +9,6 @@ on:
     branches:
       - dev
 
-permissions:
-  repository-projects: write
-
 # Jobs that define the workflow
 jobs:
 
@@ -23,11 +20,13 @@ jobs:
     - name: Checkout wiki
       uses: actions/checkout@v3
       with:
-        repository: ${{github.repository}}
+        repository: ${{github.repository}}.wiki
+        path: wiki
 
     - name: Update the wiki file with new pipeline statuses
       run: |
-        echo "wiki" > pipeline_status.md
+        echo "wiki" > wiki/pipeline_status.md
+        cd wiki
         git config user.name github-actions
         git config user.email github-actions@github.com
         git add .
