--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   pr-job:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
     - name: Say Hi
       run: echo "Run by push"
