--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,27 +1,82 @@
-name: push
+## Disclaimer - This GitHub Actions workflow runs all the tests for changed pipelines.
 
+# Name the workflow
+name: pipeline_tests
+
+# Define when it runs
 on:
   push:
-    branches-ignore:    
-      - 'main'
 
+# Jobs that define the workflow
 jobs:
-  pr-job:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Say Hi
-      run: echo "Run by push"
-    - name: Write to GITHUB_ENV
-      run: |
-        team="2T6S"
-        report_value="test"
-        echo "report_team-$team=$report_value" >> $GITHUB_ENV
 
-  post-job:
+  # A job to run the tests
+  pytest:
     runs-on: ubuntu-latest
-    needs: pr-job
     steps:
-    - name: Retrieve value from GITHUB_ENV
+    - name: Checkout PR branch
+      uses: actions/checkout@v3
+
+    - name: Export test results
+      if: ${{ always() }}
       run: |
-        team="2T6S"
-        echo $(report_team-$team)
+        report_value=$(<test_file.txt)
+        echo "report_team-$team='$report_value'" >> $GITHUB_ENV
+
+  # A job to report the test results
+  tests-report:
+    needs: pytest
+    runs-on: ubuntu-latest
+    if: ${{ always() }}
+    steps:
+    - name: Report results on step summary
+      run: |
+        # Start report
+        echo "# Correlation values" >> $GITHUB_STEP_SUMMARY
+        echo "Unthresholded maps, reproduced vs. results" >> $GITHUB_STEP_SUMMARY
+        echo "Correlation values are sorted from hypotheses 1 to 9" >> $GITHUB_STEP_SUMMARY
+
+        # Start report table
+        echo "| Team    | Number of subjects | Test status | Correlation values |" >> $GITHUB_STEP_SUMMARY
+        echo "| -------- | ------- | ------- | ------- |" >> $GITHUB_STEP_SUMMARY
+
+        # Loop through test report files
+        for team in ${{ needs.identify-tests.outputs.teams }}
+        do
+          # Retrieve the report from GITHUB_ENV, as set up by the pytest job
+          echo $(report_team-$team) >> $GITHUB_STEP_SUMMARY
+        done
+
+    - name: Checkout wiki
+      uses: actions/checkout@v3
+      with:
+        repository: ${{github.repository}}.wiki
+        path: wiki
+
+    - name: Report results on the project's wiki
+      run: |
+        # Loop through test report files & write them to the corresponding wiki page
+        for team in ${{ needs.identify-tests.outputs.teams }}
+        do
+          echo "# Correlation values for pipeline $team" > wiki/pipeline_$team.md
+          echo "Unthresholded maps, reproduced vs. results" >> wiki/pipeline_$team.md
+          echo "Correlation values are sorted from hypotheses 1 to 9" >> wiki/pipeline_$team.md
+          echo "These values were calculated by GitHub Actions run [# $GITHUB_RUN_ID]($GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID)" >> wiki/pipeline_$team.md
+          echo "| Team    | Number of subjects | Test status | Correlation values |" >> wiki/pipeline_$team.md
+          echo "| -------- | ------- | ------- | ------- |" >> wiki/pipeline_$team.md
+
+          # Retrieve the report from GITHUB_ENV, as set up by the pytest job
+          echo $(report_team-$team) >> wiki/pipeline_$team.md
+        done
+
+        # Push changes
+        cd wiki
+        git config user.name github-actions
+        git config user.email github-actions@github.com
+
+        # Test if there are changes in the repository before commiting
+        if [[ $(git diff --name-only) ]]; then
+          git add .
+          git commit -m "Pipeline status updated"
+          git push
+        fi
