--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -21,7 +21,11 @@ jobs:
       if: ${{ always() }}
       run: |
         report_value=$(<test_file.txt)
-        echo 'report_team="$report_value"' >> $GITHUB_ENV
+        {
+          echo "report_team<<EOF"
+          echo "$report_value"
+          echo EOF
+        } >> "$GITHUB_ENV"
         echo "$report_team"
 
   # A job to report the test results
