--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         {
           echo "report_team<<EOF"
-          cat test_file.txt
+          <test_file.txt
           echo EOF
         } >> "$GITHUB_OUTPUT"
         echo ${{ env.report_team }}
