--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -35,6 +35,7 @@ jobs:
       uses: actions/cache@v3
       with:
         key: cache-results
+        path: test_file.txt
 
     - name: Report results on step summary
       run: |
